syntax = "proto3";

package namespace;

option go_package = "proto;namespace";

service Namespace {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	// Adds a new user to an existing namespace
	rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
	// Remove a user from a namespace
	rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {}
}

message CreateRequest {
	string id = 1;
	string owner = 2;
}

message CreateResponse {
	NamespaceMessage namespace = 1;
}

message NamespaceMessage {
	string id = 1;
	repeated string owners = 2;
	repeated string users = 3;
	int64 created = 4;
}

message ReadRequest {
	string name = 1;
}

message ReadResponse {
	NamespaceMessage namespace = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {}

message ListRequest {
	string user = 1;
}

message ListResponse {
	repeated NamespaceMessage namespaces = 1;
}

message AddUserRequest {
	string user = 1;
	string namespace = 2;
}

message AddUserResponse {}

message RemoveUserRequest {
	string user = 1;
	string namespace = 2;
}

message RemoveUserResponse {}
